楽曲データの取り込み機能を追加しました

--- a/Cindeck/Views/MainView.xaml
+++ b/Cindeck/Views/MainView.xaml
@@ -22,7 +22,7 @@
                 <local:UnitView DataContext="{Binding Path=Units}"/>
             </TabItem>
             <TabItem Header="シミュレーション">
-                <Grid Background="#FFFFFFFF"/>
+                <local:SimulationView DataContext="{Binding Path=Simulation}"/>
             </TabItem>
         </TabControl>
     </Grid>
