--- a/Cindeck/Views/OwnedIdolView.xaml
+++ b/Cindeck/Views/OwnedIdolView.xaml
@@ -28,6 +28,8 @@
             <c:SelectedItemBindableDataGrid.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="削除" Command="{Binding DeleteCommand}"  />
+                    <Separator/>
+                    <MenuItem Header="IIDをコピー" Command="{Binding CopyIidCommand}"  />
                 </ContextMenu>
             </c:SelectedItemBindableDataGrid.ContextMenu>
             <c:SelectedItemBindableDataGrid.Columns>
