合計アピール値より属性の方が優先され、合計アピール値が低い方のアイドルがサポメンに加わってしまう問題を修正

--- a/Cindeck/Views/MainView.xaml
+++ b/Cindeck/Views/MainView.xaml
@@ -15,7 +15,7 @@
             <TabItem Header="アイドル一覧" x:Name="ImplementedIdolView">
                 <local:ImplementedIdolView DataContext="{Binding Path=ImplementedIdol}"/>
             </TabItem>
-            <TabItem Header="所持アイドル">
+            <TabItem Header="所属アイドル">
                 <local:OwnedIdolView DataContext="{Binding Path=OwnedIdol}"/>
             </TabItem>
             <TabItem Header="ユニット編成">
