--- a/Cindeck/Views/ImplementedIdolView.xaml
+++ b/Cindeck/Views/ImplementedIdolView.xaml
@@ -28,7 +28,7 @@
             </DataGrid.RowStyle>
             <c:SelectedItemBindableDataGrid.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="所持に追加" Command="{Binding AddToOwnedCommand}"  />
+                    <MenuItem Header="所属に追加" Command="{Binding AddToOwnedCommand}"  />
                     <Separator/>
                     <MenuItem Header="IIDをコピー" Command="{Binding CopyIidCommand}"  />
                 </ContextMenu>
@@ -46,7 +46,7 @@
                 </DataGridTextColumn>
                 <DataGridTextColumn IsReadOnly="True" Header="タイプ" Binding="{Binding Path=Category, Converter={StaticResource IdolCategoryConverter}}"/>
                 <DataGridTextColumn IsReadOnly="True" Header="ライフ" Binding="{Binding Path=Life}"/>
-                <DataGridTextColumn IsReadOnly="True" Header="全アピール" Binding="{Binding Path=TotalAppeal}"/>
+                <DataGridTextColumn IsReadOnly="True" Header="合計アピール" Binding="{Binding Path=TotalAppeal}"/>
                 <DataGridTextColumn IsReadOnly="True" Header="ボーカルアピール" Binding="{Binding Path=Vocal}"/>
                 <DataGridTextColumn IsReadOnly="True" Header="ダンスアピール" Binding="{Binding Path=Dance}"/>
                 <DataGridTextColumn IsReadOnly="True" Header="ビジュアルアピール" Binding="{Binding Path=Visual}"/>
