--- a/Cindeck/Views/SimulationView.xaml
+++ b/Cindeck/Views/SimulationView.xaml
@@ -21,35 +21,31 @@
                     <Label Content="ユニット" Width="80"/>
                     <ComboBox Grid.Row="0" Grid.Column="1" MinWidth="100" DisplayMemberPath="Name" ItemsSource="{Binding Units}" SelectedItem="{Binding Simulator.Unit, Mode=TwoWay}" HorizontalAlignment="Left" />
                 </StackPanel>
-
                 <StackPanel Orientation="Horizontal" Visibility="{Binding Simulator.Unit, Converter={StaticResource NullToCollapsedConverter}}">
                     <Label Content="センター効果" FontWeight="Bold"/>
                     <Label Content="{Binding Simulator.Unit.Center.CenterEffect, FallbackValue=なし, Converter={StaticResource CenterEffectConverter}}"/>
                 </StackPanel>
-
                 <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
                     <Label Content="楽曲"  Width="80"/>
 
                     <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
-                        <ComboBox MinWidth="100" ItemsSource="{Binding Songs}" SelectedItem="{Binding Simulator.Song, Mode=TwoWay}" DisplayMemberPath="Title" />
+                        <ComboBox MinWidth="200" IsEditable="True" ItemsSource="{Binding Songs}" SelectedItem="{Binding Simulator.Song, Mode=TwoWay}" DisplayMemberPath="Title" />
                         <ComboBox Margin="5,0,0,0" DisplayMemberPath="Difficulty"
                            MinWidth="100" HorizontalAlignment="Left"
                            ItemsSource="{Binding Simulator.SongDataList}" SelectedItem="{Binding Simulator.SongData, Mode=TwoWay}"/>
                         <Button Margin="5,0,0,0" Command="{Binding LoadSongsCommand}" Content="Wikiから取り込む"></Button>
                     </StackPanel>
                 </StackPanel>
-
-                <StackPanel Margin="0,5,0,0" Orientation="Horizontal" Grid.Row="3" Visibility="{Binding Simulator.SongData, Converter={StaticResource NullToCollapsedConverter}}">
+                <StackPanel Orientation="Horizontal" Grid.Row="3" Visibility="{Binding Simulator.SongData, Converter={StaticResource NullToCollapsedConverter}}">
                     <Label Content="タイプ" FontWeight="Bold"/>
                     <Label Content="{Binding Simulator.Song.Type, Converter={StaticResource IdolCategoryToSongTypeConverter}}"/>
                     <Label Content="Lv"  FontWeight="Bold"/>
                     <Label Content="{Binding Simulator.SongData.Level}"/>
                     <Label Content="ノーツ数" FontWeight="Bold"/>
                     <Label Content="{Binding Simulator.SongData.Notes}"/>
-                    <Label Content="プレイ時間(秒)" FontWeight="Bold"/>
+                    <Label Content="時間(秒)" FontWeight="Bold"/>
                     <Label Content="{Binding Simulator.SongData.Duration}"/>
                 </StackPanel>
-                
                 <StackPanel Orientation="Horizontal"  Margin="0,5,0,0">
                     <Label Content="Groove Burst"  Grid.Row="4" Grid.Column="0"/>
                     <ComboBox ItemsSource="{Binding GrooveBursts}" SelectedValue="{Binding Simulator.GrooveBurst}" DisplayMemberPath="Item2" SelectedValuePath="Item1"  Grid.Row="4" Grid.Column="1" MinWidth="100" HorizontalAlignment="Left"/>
@@ -60,16 +56,16 @@
             <StackPanel Margin="0,5,0,0" Orientation="Vertical" DockPanel.Dock="Top">
                 <StackPanel Orientation="Horizontal">
                     <CheckBox VerticalAlignment="Center" Content="ゲスト" IsChecked="{Binding EnableGuest, Mode=TwoWay}" />
-                    <TextBox FontWeight="Bold" VerticalContentAlignment="Center" Margin="5,0,0,0" Style="{StaticResource PlaceHolder}" Visibility="{Binding EnableGuest, Converter={StaticResource BooleanToVisibilityConverter}}" Tag="ゲストアイドルのIID"  Width="160" Text="{Binding GuestIid, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource IidConverter}}"/>
+                    <TextBox FontWeight="Bold" VerticalContentAlignment="Center" Margin="5,0,0,0" Style="{StaticResource PlaceHolder}" Visibility="{Binding EnableGuest, Converter={StaticResource BooleanToVisibilityConverter}}" Tag="ゲストセンターのIID"  Width="160" Text="{Binding GuestIid, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource IidConverter}}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Visibility="{Binding EnableGuest, Converter={StaticResource BooleanToVisibilityConverter}}">
-                        <Label Content="{Binding Simulator.Guest, Converter={StaticResource IdolConverter}}" FontWeight="Bold"/>
-                        <Label Visibility="{Binding Simulator.Guest.CenterEffect, Converter={StaticResource NullToCollapsedConverter}}" Content="{Binding Simulator.Guest.CenterEffect, Converter={StaticResource CenterEffectConverter}}"/>
-                    </StackPanel>
-                    <CheckBox  Margin="0,5,0,0" Content="ルーム効果(全アイドルの全アピール値10%アップ)" IsChecked="{Binding Simulator.EnableRoomEffect, Mode=TwoWay}"/>
+                    <Label Content="{Binding Simulator.Guest, Converter={StaticResource IdolConverter}}" FontWeight="Bold"/>
+                    <Label Visibility="{Binding Simulator.Guest.CenterEffect, Converter={StaticResource NullToCollapsedConverter}}" Content="{Binding Simulator.Guest.CenterEffect, Converter={StaticResource CenterEffectConverter}}"/>
+                </StackPanel>
+                <CheckBox  Margin="0,5,0,0" Content="ルーム効果(全アイドルの全アピール値10%アップ)" IsChecked="{Binding Simulator.EnableRoomEffect, Mode=TwoWay}"/>
                 <CheckBox  Margin="0,5,0,0" Content="サポートメンバー(自動的に所属アイドルから選びます)" IsChecked="{Binding Simulator.EnableSupportMembers, Mode=TwoWay}" />
                 <StackPanel Visibility="{Binding Simulator.EnableSupportMembers, Converter={StaticResource BooleanToVisibilityConverter}}">
-                    <ItemsControl Margin="0,5,0,0" ItemsSource="{Binding Simulator.SupportMembers}">
+                    <ItemsControl ItemsSource="{Binding Simulator.SupportMembers}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <WrapPanel Orientation="Horizontal" />
@@ -84,7 +80,7 @@
                             <DataTemplate>
                                 <Button Tag="{Binding Path=., Mode=OneWay}" VerticalAlignment="Center" HorizontalAlignment="Left"  Margin="5" Background="{Binding Category, Converter={StaticResource IdolTypeToColorConverter}}">
                                     <Button.Content>
-                                        <Label Margin="5"  HorizontalAlignment="Left" Content="{Binding Path=., Mode=OneWay, Converter={StaticResource UnitSlotConverter}}" />
+                                        <Label HorizontalAlignment="Left" Content="{Binding Path=., Mode=OneWay, Converter={StaticResource UnitSlotConverter}}" />
                                     </Button.Content>
                                 </Button>
                             </DataTemplate>
@@ -101,40 +97,43 @@
                 </StackPanel>
                 <Button HorizontalAlignment="Left" Content="実行" Command="{Binding StartSimulationCommand}" Width="200"/>
                 <StackPanel  x:Name="ResultPanel"  Visibility="{Binding Simulator.ResultsUpToDate, Converter={StaticResource BooleanToVisibilityConverter}}">
-                    <Label DockPanel.Dock="Top" Content="※結果はALL PERFECTのスコアで、ノーツの密度の変化は計算に入れていません"/>
-                    <StackPanel DockPanel.Dock="Top" Margin="0,5,0,0" Orientation="Horizontal">
-                        <Label Content="スコア(平均)"  FontWeight="Bold" />
-                        <Label>
-                            <TextBlock>
+                    <Label DockPanel.Dock="Top" Content="※結果はALL PERFECTの場合のスコアで、ノーツの密度の変化は計算に入れていません"/>
+                    <StackPanel Orientation="Horizontal">
+                        <StackPanel DockPanel.Dock="Top" Margin="0,5,0,0" Orientation="Horizontal">
+                            <Label Content="スコア(平均)"  FontWeight="Bold" />
+                            <Label>
+                                <TextBlock>
                         <Run Text="{Binding AverageScore}"></Run>
                         <Run>(1ノートあたり</Run>
                          <Run Text="{Binding AverageScorePerNote}"></Run>
                         <Run>)</Run>
-                            </TextBlock>
-                        </Label>
-                    </StackPanel>
-                    <StackPanel  DockPanel.Dock="Top" Margin="0,5,0,0" Orientation="Horizontal">
-                        <Label Content="スコア(最大)"  FontWeight="Bold" />
-                        <Label>
-                            <TextBlock>
+                                </TextBlock>
+                            </Label>
+                        </StackPanel>
+                        <StackPanel  DockPanel.Dock="Top" Margin="0,5,0,0" Orientation="Horizontal">
+                            <Label Content="スコア(最大)"  FontWeight="Bold" />
+                            <Label>
+                                <TextBlock>
                         <Run Text="{Binding MaxScore}"></Run>
                         <Run>(1ノートあたり</Run>
                          <Run Text="{Binding MaxScorePerNote}"></Run>
                         <Run>)</Run>
-                            </TextBlock>
-                        </Label>
-                    </StackPanel>
-                    <StackPanel  DockPanel.Dock="Top" Margin="0,5,0,0" Orientation="Horizontal">
-                        <Label Content="スコア(最小)"  FontWeight="Bold" />
-                        <Label>
-                            <TextBlock TextAlignment="Center">
+                                </TextBlock>
+                            </Label>
+                        </StackPanel>
+                        <StackPanel  DockPanel.Dock="Top" Margin="0,5,0,0" Orientation="Horizontal">
+                            <Label Content="スコア(最小)"  FontWeight="Bold" />
+                            <Label>
+                                <TextBlock TextAlignment="Center">
                         <Run Text="{Binding MinScore}"></Run>
                         <Run>(1ノートあたり</Run>
                         <Run Text="{Binding MinScorePerNote}"></Run>
                         <Run>)</Run>
-                            </TextBlock>
-                        </Label>
+                                </TextBlock>
+                            </Label>
+                        </StackPanel>
                     </StackPanel>
+                    
                     <StackPanel  DockPanel.Dock="Top" Orientation="Horizontal"  Margin="0,5,0,0">
                         <Label Content="結果の詳細" Grid.Row="4" Grid.Column="0"/>
                         <ComboBox x:Name="SimulationResults" SelectedItem="{Binding SelectedResult, Mode=TwoWay}" ItemsSource="{Binding SimulationResults}" DisplayMemberPath="Id" Grid.Row="4" Grid.Column="1" MinWidth="100" HorizontalAlignment="Left"/>
