--- a/Cindeck/Views/ImplementedIdolView.xaml
+++ b/Cindeck/Views/ImplementedIdolView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Cindeck.Views"
              xmlns:c="clr-namespace:Cindeck.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -14,12 +14,19 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="341*"/>
-            <RowDefinition Height="43*"/>
-        </Grid.RowDefinitions>
-
+    <DockPanel LastChildFill="True">
+        <DockPanel Margin="0,5,0,0" DockPanel.Dock="Top">
+            <StackPanel DockPanel.Dock="Left" Orientation="Horizontal">
+                <Label Content="タイプ"/>
+                <ComboBox  Width="150" ItemsSource="{Binding IdolTypes}" DisplayMemberPath="Item2" SelectedValuePath="Item1" SelectedValue="{Binding TypeFilter, Mode=TwoWay}"/>
+                <Label Content="レア度"/>
+                <ComboBox  Width="150" ItemsSource="{Binding Rarities}" DisplayMemberPath="Item2" SelectedValuePath="Item1" SelectedValue="{Binding RarityFilter, Mode=TwoWay}"/>
+                <Label Content="名前"/>
+                <TextBox Width="200" Text="{Binding NameFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <CheckBox Margin="5,0,0,0" VerticalAlignment="Center" IsChecked="{Binding HideOwned, Mode=TwoWay}"  Content="所有済みのアイドルを表示しない"/>
+            </StackPanel>
+            <Button DockPanel.Dock="Right" x:Name="btnLoadIdols" Command="{Binding Path=ReloadDataCommand}" Content="Wikiから取り込む" HorizontalAlignment="Right" Margin="0,0,10,0" Width="120" Height="20"/>
+        </DockPanel>
         <c:SelectedItemBindableDataGrid ItemsSource="{Binding Idols}" Sorting="SelectedItemBindableDataGrid_Sorting" SelectedItemsList="{Binding SelectedIdols, Mode=OneWayToSource}" AutoGenerateColumns="False" HorizontalAlignment="Stretch" Margin="10,10,0,0" VerticalAlignment="Stretch" Grid.Row="0">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
@@ -55,7 +62,5 @@
                 <DataGridTextColumn IsReadOnly="True" Header="実装" Binding="{Binding Path=ImplementationDate, StringFormat=yyyy/MM/dd}"/>
             </c:SelectedItemBindableDataGrid.Columns>
         </c:SelectedItemBindableDataGrid>
-        <Button x:Name="btnLoadIdols" Command="{Binding Path=ReloadDataCommand}" Content="Wikiから取り込む" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="112" Grid.Row="1" Height="20">
-        </Button>
-    </Grid>
+    </DockPanel>
 </UserControl>
